--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["strip"]
+
 [package]
 name = "gitstat-rs"
 version = "0.1.0"
@@ -11,3 +13,9 @@ structopt = "^0.3"
 time = "0.1.39"
 serde = { version = "^1.0.130", features = ["derive"] }
 serde_json = "^1.0.72"
+[profile.release]
+opt-level = 3
+lto = true
+strip = 'symbols'
+codegen-units = 1
+overflow-checks = false
