--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ structopt = "^0.3"
 time = "0.1.39"
 serde = { version = "^1.0.130", features = ["derive"] }
 serde_json = "^1.0.72"
+chrono = "0.4.19"
+
 [profile.release]
 opt-level = 3
 lto = true
