--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ time = "0.3.5"
 serde = { version = "^1.0.130", features = ["derive"] }
 serde_json = "1.0.75"
 chrono = "0.4.19"
+rayon = "1.5.1"
 
 [profile.release]
 opt-level = 3
