--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-git2 = "^0.13"
-structopt = "^0.3"
-time = "0.1.39"
+git2 = "0.13.25"
+structopt = "0.3.26"
+time = "0.3.5"
 serde = { version = "^1.0.130", features = ["derive"] }
-serde_json = "^1.0.72"
+serde_json = "1.0.75"
 chrono = "0.4.19"
 
 [profile.release]
